Add a couple other useful files

--- a/.fonts.conf
+++ b/.fonts.conf
@@ -11,6 +11,9 @@
         <edit name="hintstyle" mode="assign">
             <const>hintfull</const>
         </edit>
+        <edit name="autohint" mode="assign">
+            <const>true</const>
+        </edit>
         <edit name="lcdfilter" mode="assign">
             <const>lcddefault</const>
         </edit>
