Fix some long outstanding font problems, sync up vim rcs

--- a/.fluxbox/styles/bars/theme.cfg
+++ b/.fluxbox/styles/bars/theme.cfg
@@ -19,8 +19,14 @@
 ############################################################# FONTS ###########
 
 # *.font: Unifont-5
-# *.font: snap
-*.font: mintsstrong-7
+# *.font: artwiznu-9
+# *.font: artwizmints-strong-9
+
+# *.font: artwizcure-9
+# *.font: artwizedges-9
+# *.font: artwizglisp-9
+# *.font: artwizlime-9
+*.font: artwizsnap-9
 
 
 ############################################################## MENU ###########
