--- a/.fonts.conf
+++ b/.fonts.conf
@@ -12,10 +12,10 @@
             <const>hintfull</const>
         </edit>
         <edit name="autohint" mode="assign">
-            <const>true</const>
+            <bool>true</bool>
         </edit>
         <edit name="lcdfilter" mode="assign">
-            <const>lcddefault</const>
+            <const>lcdlight</const>
         </edit>
         <edit name="rgba" mode="assign">
             <const>rgb</const>
